--- a/NAM-CDE/pom.xml
+++ b/NAM-CDE/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>idfocus</groupId>
 	<artifactId>nam-cde</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Conditional Data Extension</name>
 	<description>Custom Extension for NetIQ Access Manager</description>
 	<properties>
